--- a/index.html
+++ b/index.html
@@ -1006,10 +1006,14 @@
 
         // Kredensial login
         const LOGIN_CREDENTIALS = {
-            <script>
-            <!-- code by https://www.html-code-generator.com -->
-            document.write(unescape('%75%73%65%72%6E%61%6D%65%3A%20%27%64%75%6B%63%61%70%69%6C%74%61%6E%69%6D%62%61%72%27%2C%0A%70%61%73%73%77%6F%72%64%3A%20%27%31%32%33%34%35%36%37%38%27'));
-            </script>
+            username: '<script>
+<!-- code by https://www.html-code-generator.com -->
+document.write(unescape('%64%75%6B%63%61%70%69%6C%74%61%6E%69%6D%62%61%72'));
+</script>',
+            password: '<script>
+<!-- code by https://www.html-code-generator.com -->
+document.write(unescape('%31%32%33%34%35%36%37%38'));
+</script>'
         };
 
         // Fungsi untuk membuka modal login
