--- a/index.html
+++ b/index.html
@@ -1006,14 +1006,8 @@
 
         // Kredensial login
         const LOGIN_CREDENTIALS = {
-            username: '<script>
-<!-- code by https://www.html-code-generator.com -->
-document.write(unescape('%64%75%6B%63%61%70%69%6C%74%61%6E%69%6D%62%61%72'));
-</script>',
-            password: '<script>
-<!-- code by https://www.html-code-generator.com -->
-document.write(unescape('%31%32%33%34%35%36%37%38'));
-</script>'
+            username: 'dukcapiltanimbar',
+            password: '12345678'
         };
 
         // Fungsi untuk membuka modal login
